style/less/site.less
// main: build.less

*:focus {
	outline: none;
}

body {
	overflow-x: hidden;
	background: @base-color;
	color: @contrast-color;
	font-family: @font;
	font-weight: 300;
	cursor: none;
	.selection(@base-color, @vibrant-color);
	.no-select();
}

header {
	position: fixed;
	z-index: 2;
	width: 100%;
	left: 0;
	top: 0;
	padding: @gutter / 2;
	font-size: 14px;
	pointer-events: none;
	mix-blend-mode: difference;

	ul {
		display: flex;
		margin-top: 2px;

		li {
			margin-left: 20px;
		}
	}

	.column {
		pointer-events: auto;
	}
}

footer {
	position: fixed;
	z-index: 0;
	bottom: 0;
	width: 100%;
	height: 382px;

	& > .column {
		opacity: 0;
		pointer-events: none;
		.transform(translate3d(0, -40px, 0));
		.transition(opacity 1.5s @cubic, transform 1.5s @cubic;);
	}

	&.show > .column {
		opacity: 1;
		pointer-events: auto;
		.transform(translate3d(0, 0, 0));
	}
}

main:not([data-namespace="index"]) {
	margin-bottom: 382px;
}

section {
	position: relative;
	padding: @gutter * 1.5 @min-gutter;
	width: 100%;
	min-height: 100vh;
	z-index: 1;
}

h1, h2, dt {
	margin: 0;
	font-weight: 100;
	font-size: 35px;
}

p {
	margin: 50px 0 0 0;
	font-size: 18px;
	line-height: 1.8;

	&.no-margin {
		margin: 0;
	}
}

strong {
	font-size: 15px;
	font-weight: 700;
}

small {
	font-size: 12px;
	font-weight: 300;
}

article {
	margin-top: 00px;
}

nav {
	float: right;
}

ul {
	margin: 0;
	padding: 0;
	list-style-type: none;
}

dl {
	margin-top: 65px;
}

dt {
	margin-bottom: 15px;
}

dd {
	position: relative;
	margin-left: 0;
	padding-left: 25px;
	font-size: 18px;
	line-height: 1.8;

	&::before {
		content: '';
		position: absolute;
		left: 0;
		top: 2px;
		width: 16px;
		height: 100%;
		background: url('/picture/arrow.svg') no-repeat center center;
	}
}

a {
	color: @contrast-color;
	text-decoration: none;
	cursor: none;
}

svg {
	fill: currentColor;
}

address {
	margin-top: 10px;
	font-style: normal;
}

form {
	margin-bottom: 15px;
	.transition(all 500ms ease);
}

textarea {
	display: block;
	width: 100%;
	min-width: 100%;
	height: 22vh;
	padding: 0;
	font-size: 35px;
	font-weight: 100;
	color: @bright-color;
	background: none;
	line-height: 1.4;
	border: none;
	border-bottom: 1px solid fade(@bright-color, 10%);
	resize: none;
	cursor: none;
	.border-radius(0);
	.transition(all 500ms ease);

	&:focus {
		color: @base-color;
		border-bottom: 1px solid @base-color;
	}

	&:disabled {
		overflow: hidden;
		background: none;
		cursor: default;
		pointer-events: none;
	}
}

[data-emergence]:not(.vertical) {
	.transition(opacity 1s ease);
}

[data-emergence="hidden"]:not(.vertical) {
	opacity: 0;
}

[data-emergence="visible"]:not(.vertical) {
	opacity: 1;
}

.black {
	background: @base-color;
	color: @contrast-color;
}

.white {
	background: @contrast-color;
	color: @base-color;

	a {
		color: currentColor;
	}
}

.text-right {
	text-align: right;
}

.logo {
	display: inline-block;
	width: 150px;
	height: 20px;

	g {
		fill: none;
		stroke: currentColor;

		circle {
			stroke: none;
			fill: currentColor;
		}
	}
}

.menu {
	padding-left: 40px;
}

.intro {
	padding: 0 @min-gutter;

	h1 {
		margin-top: 30vh;
		max-width: 41vw;
	}

	p {
		margin-bottom: 18vh;
		max-width: 27vw;
	}

	.row {
		height: 50vh;
	}
}

.lang {
	li {
		position: relative;

		&:last-child::before {
			content: '/';
			position: absolute;
			left: -12px;
			color: @contrast-color;
		}

		&.active a {
			color: @contrast-color;
		}
	}

	a {
		color: @bright-color;
	}
}

.media {
	position: fixed;
	z-index: 2;
	left: 0;
	top: 50vh;
	width: @gutter;
	text-align: center;
	mix-blend-mode: difference;
	.transform(translate(0, -50%));

	svg {
		width: 15px;
		height: 15px;
		.transition(transform 1s @cubic);
	}

	a {
		display: block;
		position: relative;
		padding: 4px 0px;

		&::before {
			content: '';
			position: absolute;
			top: 50%;
			left: 0;
			width: 0px;
			height: 1px;
			background: @contrast-color;
			will-change: width;
			.transition(width 1.1s @cubic);
		}

		&:hover, &:focus {
			&::before {
				width: 40px;
			}

			svg {
				.transform(translateX(10px));
			}
		}
	}
}

/*.underline {
	position: relative;
	z-index: 0;

	&::before {
		content: '';
		position: absolute;
		z-index: -1;
		left: 0;
		bottom: 0;
		width: 100%;
		height: 0;
		background: fade(@vibrant-color, 60%);
		.transition(height 250ms @cubic);
	}

	&:hover, &:focus {
		&::before {
			height: 30%;
			.transition(height 500ms @cubic);
		}
	}
}*/

.button {
	display: inline-flex;
	align-items: center;
	font-weight: 100;
	font-size: 18px;
	cursor: none;

	.arrow {
		position: relative;
		display: inline-block;
		margin-right: 10px;
		.transition(transform 700ms @cubic);

		&::before {
			content: '';
			display: block;
			width: 11px;
			height: 11px;
			border-width: 1px 1px 0 0;
			border-style: solid;
			border-color: currentColor;
			.border-radius(0 2px 0 0);
			.transform(rotate(45deg));
		}

		&::after {
			content: '';
			display: block;
			position: absolute;
			right: 0px;
			top: 5px;
			width: 14px;
			height: 1px;
			background: currentColor;
			.transition(width 1.4s @cubic);
			will-change: width;
		}
	}

	&:hover, &:focus {
		.arrow {
			.transform(translateX(-10px));
		}

		.arrow::after {
			width: 40px;
		}
	}

	&.big {
		font-size: 35px;
	}
}

.slider {
	position: fixed;
	top: 0;
	right: 0;
	height: 100%;

	div {
		position: absolute;
		top: 50%;
		height: 50%;
		max-width: 56%;
	}

	h1 {
		margin-top: 70px;
	}

	.button {
		position: absolute;
		bottom: 20%;
	}
}

.motio-o-home {
	height: 100vh;
	width: 100vh;
	stroke: @vibrant-color;
}

.motio-o-contact {
	position: fixed;
	right: 0;
	top: -40vh;
	width: 80vh;
	height: 80vh;
	z-index: -1;
	stroke: @vibrant-color;
	.transform(rotate(90deg));
}

.wrapper-motio-vertical {
	position: relative;
	margin-left: @gutter;
	height:	0;
	width: calc(~'50vw -' @gutter);
	z-index: 3;
}

.motio-vertical {
	position: absolute;
	left: calc(~'50% - 177px' - @min-gutter);
	top: -120px;
	width: 353px;
	pointer-events: none;

	svg {
		display: block;
		fill: none;
		stroke: @vibrant-color;
	}

	circle {
		stroke: none;
	}

	.vertical {
		width: 100%;
		margin-bottom: 51px;
		color: @vibrant-color;
	}
}

.post {
	height: 27px;
	margin-top: 20px;
	visibility: visible;
	opacity: 1;
}

.message {
	position: absolute;
	display: block;
	visibility: hidden;
	opacity: 0;
}

.warning {
	color: @warning-color;
}

.state {
	.post {
		visibility: hidden;
		opacity: 0;
		.transform(translateY(-10px));
	}

	.message {
		.transform(translateY(-25px));
	}

	&.nomail .missing-mail, &.pending .pending-request, &.undelivered .bad-request, &.delivered .message-sent {
		visibility: visible;
		opacity: 1;
	}

	&.pending {
		.progress {
			.animation(pending-progress 4s 500ms @cubic forwards);
		}
	}

	&.undelivered {
		.progress {
			.animation(undelivered-progress 1s @cubic forwards);
		}
	}

	&.delivered {
		.progress {
			.animation(delivered-progress 1s @cubic forwards);
		}
	}
}

.post, .message {
	.transition(transform 400ms ease, opacity 400ms ease, visibility 400ms ease;);
}

.progress {
	display: block;
	width: 0;
	height: 1px;
	margin-top: -1px;
	background: @base-color;
}

.emoji {
	display: inline-block;
	font-size: 30px;
	line-height: 0.7;
	margin-left: 5px;
}

.illustration-404 {
	position: relative;
}

.dot {
	position: fixed;
	z-index: 100;
	left: 50%;
	top: 50%;
	width: 100px;
	height: 100px;
	opacity: 0;
	mix-blend-mode: difference;
	pointer-events: none;

	&.init {
		opacity: 1;
		.transition(opacity 1s @cubic);
	}

	&.link circle {
		.transform(scale(4));
	}

	&.down circle {
		.transform(scale(0.7));
	}

	circle {
		transform-origin: 50% 50%;
		.transition(transform 250ms ease);
	}
}

.dot-pulse {
	z-index: 90;
	mix-blend-mode: difference;
	pointer-events: none;
}

.dot-transition {
	z-index: 1;
	position: fixed;
}

